--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,38 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(193, 65, 65, 0.87);
-  background-color: #1d1c28;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+#root {
+  background-color: aqua;
+  height: 100%;
+}
+:root {
+  background-color: rgb(188, 255, 255);
+  height: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
+/* Base styles in Tailwind 
+@layer base {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    width: 100%;
+    background-color: skyblue;
+    border: 5px solid blueviolet;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
 }
+/* 
+/* Responsive styles for tablets and mobile devices 
+@media (max-width: 730px) {
+  .flex {
+    flex-direction: column;
+    gap: 1rem;
+    min-height: 68rem;
+  }
+
+  .w-1\/2 {
+    width: 100%;
+    padding-bottom: 50px;
+  }
+
+  .box-border {
+    height: 100px;
+  }
+}  */
